Scroll Animations On Mobile Fix #5.

--- a/style.css
+++ b/style.css
@@ -869,43 +869,43 @@ footer {
     .hidden {
         opacity: 1;
         transform: translateX(0);
-        transition: all 0s;
+        transition: none;
     }
     
     .hidden:nth-child(1) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(2) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(3) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(4) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(5) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(6) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(7) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(8) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
     
     .hidden:nth-child(9) {
-        transition-delay: 0ms;
+        transition-delay: none;
     }
 }
 
